<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:background="@color/background"
    android:paddingTop="20dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/border_black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/judul_artikel"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:paddingTop="4dp"
            android:text="@string/summaryarticle"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="8dp"
            android:text="@string/sourcearticle"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
