<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background2"
    tools:context=".HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bar_hallo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/greeting_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Berat Badan"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_Weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/kg"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tinggi_badan"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text="@string/cm"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/background"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BMI"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="center"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/tv_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text=" ... Kg/m2"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/berita_terkini"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:background="@color/background"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArticles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            tools:listitem="@layout/item_article" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
