<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background1"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <FrameLayout
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/maha"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="373dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nazwa_hemalia_putri"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                android:background="@android:color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvLabelAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/umur1"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvAgeColon" />

                <TextView
                    android:id="@+id/tvAgeColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvLabelAge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvAge"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_tahun"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvAgeColon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvLabelHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Tinggi Badan"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelAge"
                    app:layout_constraintEnd_toStartOf="@+id/tvHeightColon"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvHeightColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvLabelHeight"
                    app:layout_constraintTop_toBottomOf="@+id/tvAgeColon"
                    app:layout_constraintEnd_toStartOf="@+id/tvHeight"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="165 cm"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvHeightColon"
                    app:layout_constraintTop_toBottomOf="@+id/tvAge"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvLabelWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Berat Badan"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelHeight"
                    app:layout_constraintEnd_toStartOf="@+id/tvWeightColon"
                    tools:ignore="HardcodedText" />


                <TextView
                    android:id="@+id/tvWeightColon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvLabelWeight"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeightColon"
                    app:layout_constraintEnd_toStartOf="@+id/tvWeight"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="55 kg"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/tvWeightColon"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tvHealthConditionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:text="Kondisi Kesehatan:"
                android:textColor="#283593"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <androidx.cardview.widget.CardView
                android:id="@+id/healthConditionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:padding="8dp"
                android:backgroundTint="@android:color/white">

                <TextView
                    android:id="@+id/tvHealthCondition"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="Sehat"
                    android:textColor="#283593"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ImageView
            android:id="@+id/logoutImageView"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logout"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</ScrollView>
